--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=R4A_I2C
-version=0.2.0
+version=0.3.0
 license=MIT
 author=Lee Leahy <lpleahyjr@gmail.com>
 maintainer=Lee Leahy <lpleahyjr@gmail.com>
@@ -9,4 +9,4 @@ category=Signal Input/Output
 url=https://github.com/LeeLeahy2/R4A_I2C
 architectures=esp32
 includes=R4A_I2C.h
-depends=
+depends=R4A_Robot
