--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.3.0
 license=MIT
 author=Lee Leahy <lpleahyjr@gmail.com>
 maintainer=Lee Leahy <lpleahyjr@gmail.com>
-sentence=Robots-4-All I2C support routines.
+sentence=Robots-For-All I2C support routines.
 paragraph=Supports communication between host and devices over the I2C bus.
 category=Signal Input/Output
 url=https://github.com/LeeLeahy2/R4A_I2C
