--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=R4A_I2C
-version=0.4.2
+version=0.4.3
 license=MIT
 author=Lee Leahy <lpleahyjr@gmail.com>
 maintainer=Lee Leahy <lpleahyjr@gmail.com>
@@ -9,4 +9,4 @@ category=Signal Input/Output
 url=https://github.com/LeeLeahy2/R4A_I2C
 architectures=esp32
 includes=R4A_I2C.h
-depends=R4A_Robot
+depends=R4A_Robot (>=0.3.3), SparkFun u-blox GNSS v3 (>=3.1.4)
